<resources>

    <string name="app_name">MyNeighbor</string>
    <string name="app_name_splash">My\nNeighbor</string>

    <string name="start_with_kakao">카카오로 시작하기</string>
    <string name="term_of_service"><u>서비스 이용약관</u></string>
    <string name="privacy_policy"><u>개인정보 처리방침</u></string>
    <string name="i_agree_to_the_terms_and_conditions_above">위의 이용약관 확인 후 동의합니다.</string>

    <string name="previous">이전</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="get_started_signup">회원가입 시작하기</string>

    <string name="please_select_apartment_that_you_are_living">거주 중이신 아파트를 선택해주세요</string>
    <string name="please_proceed_with_membership_registration">환영합니다!\n회원가입을 진행해주세요!</string>

    <string name="profile">프로필</string>
    <string name="nickname">닉네임</string>
    <string name="status_message">상태메시지</string>
    <string name="purpose_of_sign_up">가입목적</string>

    <string name="append_necessary_text">%s(필수)</string>
    <string name="please_write_within_ten_characters">10자 이하로 입력해주세요</string>
    <string name="multiple_selections_are_possible">(복수선택이 가능합니다)</string>

    <string name="allow_permission_warning_message">권한을 허용하지 않으시면, 기능을 사용하실 수 없습니다</string>
    <string name="allow_location_permission_warning_message">권한을 허용하지 않으시면, 현재 위치를 확인할 수 없습니다</string>
    <string name="allow_permission">허용하기</string>
    <string name="close">닫기</string>
    <string name="profile_picture">프로필 사진</string>
    <string name="gallery">갤러리</string>
    <string name="camera">카메라</string>

    <string name="map">지도</string>
    <string name="chat">채팅</string>
    <string name="my_info">내정보</string>

    <string name="request_near">내 주변 요청</string>
    <string name="request_near_none">현재 내 주변에 요청이 없습니다</string>
    <string name="accepting_request">의뢰 수락하기</string>

    <string name="none_chat_room_yet">아직 채팅방이 없습니다</string>

</resources>